--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ a.menu {
 	font-weight: bold;
 	text-align: center;
 	/* border: solid 1px lightblue; */
-	padding: 10px;
+	padding: 30px 10px 30px 10px;
 	width: 250px;
 	margin: auto;
 	text-decoration: none;
@@ -14,6 +14,10 @@ a.menu {
 
 a.menu:hover {
 	background-color: red;
+}
+
+#mainMenu {
+	padding-top: 10vh;
 }
 
 /*---------------------------*/
