--- a/style.css
+++ b/style.css
@@ -131,7 +131,8 @@ a.menu2 { /* links that have class=menu2 */
 }
 
 #contentWrap {
-	padding-bottom: 20px; /* same as footer height */
+	/*padding-bottom: 20px; same as footer height */
+	padding: 20px 30px 20px 30px;
 	display: block;
 	overflow: auto;
 }
