--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ div {
 #logo {
 	float: left;
 	height: 100%; /* to fill parent (#header height;) */
+	/* max-width: 30vw; */
 }
 
 #title {
@@ -52,7 +53,7 @@ div {
 
 #title h1 { /* h1 that are in #title */
 	color: black;
-	font-size: clamp(10px, 10vw, 80px);
+	font-size: clamp(10px, 5vw, 80px);
 	font-weight: bold;
 	padding-top: 20px;
 	margin: 0;
